--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			
 		</div>
 
-		<form>
+		<form id='new-team-form'>
 			<label>Team Name:</label>
 			<input name="name" type="text" />
 			<label>League:</label>
